--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "three.js-journey",
-  "version": "1.0.0",
+  "name": "vite-project",
   "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.8"
+    "vite": "^4.4.5"
   },
   "dependencies": {
     "gsap": "^3.12.2",
