--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
+    "cannon-es": "^0.20.0",
     "gsap": "^3.12.2",
     "lil-gui": "^0.18.2",
     "three": "^0.155.0"
